src/objects/MT_MediaFlightMotiveAllocation__c.object
<CustomObject>
    <fields>
        <fullName>MT_From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MediaFlight_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Flight</label>
        <referenceTo>MT_MediaFlight__c</referenceTo>
        <relationshipLabel>Media Flight Motive Allocations</relationshipLabel>
        <relationshipName>MT_Media_Flight_Motive_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_MediaMotive_ref__c</fullName>
        <label>Media Motive</label>
        <referenceTo>MT_MediaMotive__c</referenceTo>
        <relationshipName>MediaFlightMotiveAllocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>MT_MediaProduct_ref__c</fullName>
        <label>Advertised Media Product</label>
        <referenceTo>MT_AdvertisedMediaProduct__c</referenceTo>
        <relationshipLabel>Media Flight Motive Allocations</relationshipLabel>
        <relationshipName>Media_Flight_Motive_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_Position__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_RollingDistribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rolling Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                    <default>true</default>
                    <label>Main</label>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Flight Motive Allocation</label>
    <nameField>
        <displayFormat>MFMA-{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Flight Motive Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>